2006-04-29  Johannes Hölzl <johannes.hoelzl@gmx.de>

	reviewed by: Johan Dahlin  <jdahlin@async.com.br>

	* examples/Makefile.am:
	* examples/option.py:
	* gobject/Makefile.am:
	* gobject/gobjectmodule.c: (init_gobject):
	* gobject/option.py:
	* gobject/pygobject-private.h:
	* gobject/pygoptioncontext.c: (pyg_option_context_init),
	(pyg_option_context_dealloc), (pyg_option_context_parse),
	(pyg_option_context_set_help_enabled),
	(pyg_option_context_get_help_enabled),
	(pyg_option_context_set_ignore_unknown_options),
	(pyg_option_context_get_ignore_unknown_options),
	(pyg_option_context_set_main_group),
	(pyg_option_context_get_main_group),
	(pyg_option_context_add_group), (pyg_option_context_compare),
	(pyg_option_context_new):
	* gobject/pygoptiongroup.c: (check_if_owned), (destroy_g_group),
	(pyg_option_group_init), (pyg_option_group_dealloc), (arg_func),
	(pyg_option_group_add_entries),
	(pyg_option_group_set_translation_domain),
	(pyg_option_group_compare), (pyg_option_group_transfer_group),
	(pyg_option_group_new):
	* tests/test_option.py:

	Add support for GOption, fixes #163645

2006-04-29  Johan Dahlin  <jdahlin@async.com.br>

	* gobject/pygtype.c (gclosure_from_pyfunc): 

	* gobject/pygobject.c (pygobject_disconnect_by_func) 
	(pygobject_handler_block_by_func) 
	(pygobject_handler_unblock_by_func): 

	* tests/test_signal.py (TestEmissionHook._callback): 

	Fix #154845, add tests and a private method.
	
2006-04-23  John Ehresman   <jpe@wingware.com>

	reviewed by: Gustavo

	* Makefile.am:
	* pygtk.py:
	* pygtk.py.in:
	Bug 338945: Make pygtk.py relocatable

2006-04-18  John Ehresman   <jpe@wingware.com>

	* dsextras.py: Add compiler / linker flags from pkgconfig-2.0.pc
	by default, with an override mechanism.  Filter out -lc & -lm if
	compiling with msvc.

	* setup.py: Change C extension name to _gobject and don't use the
	pkgconfig-2.0.pc when compiling

2006-04-15  Gustavo J. A. M. Carneiro  <gjc@gnome.org>
